--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Lab assignment similar to the trello list",
   "main": "list.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/cowfun/To_Do_List#readme",
   "dependencies": {
-    "express": "^4.16.1"
+    "express": "^4.16.1",
+    "nodemon": "^1.12.1"
   }
 }
