--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/cowfun/To_Do_List#readme",
   "dependencies": {
+    "ejs": "^2.5.7",
     "express": "^4.16.1",
     "nodemon": "^1.12.1"
   }
