--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   },
   "homepage": "https://github.com/cowfun/To_Do_List#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
     "express": "^4.16.1",
+    "morgan": "^1.9.0",
     "nodemon": "^1.12.1"
   }
 }
