--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Lab assignment similar to the trello list",
   "main": "list.js",
   "scripts": {
-    "start": "nodemon"
+    "start": "nodemon",
+    "db:create": "createdb --echo list_dev",
+    "db:drop": "dropdb --echo --if-exists list_dev",
+    "db:migrate": "node db/migration.js"
   },
   "repository": {
     "type": "git",
@@ -26,7 +29,9 @@
     "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
     "express": "^4.16.1",
+    "knex": "^0.13.0",
     "morgan": "^1.9.0",
-    "nodemon": "^1.12.1"
+    "nodemon": "^1.12.1",
+    "pg": "^7.3.0"
   }
 }
